--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "mptitlebar",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "dist/mpTitlebar.js",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/chenlang0311/mptitlebar"
   },
   "keywords": [
     "javascript",
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --target lib --name mp-titlebar ./src/plugin/index.js",
+    "build": "vue-cli-service build --target lib --name mpTitlebar ./src/plugin/index.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
